# dprint-plugin-classname-wrap

./: .gitignore  .justfile  Cargo.toml  README.md
.github/workflows/: release.yml
local_test/: .dprint.json  main.tsx
src/: configuration.rs  format_text.rs  generation.rs  lib.rs  main.rs  wasm_plugin.rs
src/generation/: generate.rs  tw_sorter.rs  tw_visitor.rs  tw_wrapper.rs  types.rs  visitor.rs  wrapper.rs
